--- a/main/templates/main/history.html
+++ b/main/templates/main/history.html
@@ -22,6 +22,6 @@
     {% else %}
         <p>No borrow history found.</p>
     {% endif %}
-    <a href="{% url 'home' %}" class="btn btn-primary bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-700 mt-4">Back to Home</a>
+    <a href="{% url 'home' %}" class="btn btn-primary bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-700 mt-8 inline-block">Back to Home</a>
 </div>
 {% endblock %}
