--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -70,9 +70,9 @@
     <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
         {% if messages %}
             {% for message in messages %}
-            <div class="p-8 mb-8 text-3xl font-bold text-black bg-{{ message.tags }}-600 border-l-4 border-{{ message.tags }}-800 rounded-lg" role="alert">
-                {{ message }}
-            </div>
+                <div class="mb-4 p-4 rounded-lg {% if message.tags == 'success' %}bg-green-100 text-green-700 border-green-400{% elif message.tags == 'error' %}bg-red-100 text-red-700 border-red-400{% else %}bg-blue-100 text-blue-700 border-blue-400{% endif %} border">
+                    {{ message }}
+                </div>
             {% endfor %}
         {% endif %}
         {% block content %}
