--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -67,14 +67,15 @@
     </nav>
     {% endblock %}
 
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert mb-4 p-4 rounded-lg {% if message.tags == 'success' %}bg-green-100 text-green-700 border-green-400{% elif message.tags == 'error' %}bg-red-100 text-red-700 border-red-400{% endif %}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
+    
     <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
-        {% if messages %}
-            {% for message in messages %}
-                <div class="mb-4 p-4 rounded-lg {% if message.tags == 'success' %}bg-green-100 text-green-700 border-green-400{% elif message.tags == 'error' %}bg-red-100 text-red-700 border-red-400{% else %}bg-blue-100 text-blue-700 border-blue-400{% endif %} border">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        {% endif %}
         {% block content %}
         {% endblock %}
     </main>
